--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,13 @@
             android:backgroundTint="@android:color/transparent"
             />
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:layout_marginStart="30dp"
+    android:layout_marginEnd="30dp"
+    android:layout_marginTop="3dp"
+    android:background="@android:color/black"/>
 
 
         <EditText
