--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
             android:backgroundTint="@android:color/transparent"
             />
 
+
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="1dp"
@@ -69,6 +70,16 @@
             android:textStyle="bold"
             android:backgroundTint="@android:color/transparent"
             />
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="3dp"
+            android:background="@android:color/black"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
