--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -118,6 +118,35 @@
                 android:textColor="@color/white"
                 android:text="Sign Up" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign In"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:padding="15dp"
+            android:layout_marginStart="20dp"
+            android:textColor="@color/white"
+            android:layout_centerInParent="true"
+            android:layout_alignParentStart="true"
+            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="use Email"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:layout_marginStart="20dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentEnd="true"
+                />
+        </RelativeLayout>
     </LinearLayout>
 
 
