--- a/app/src/main/res/layout/options_genre.xml
+++ b/app/src/main/res/layout/options_genre.xml
@@ -34,6 +34,7 @@
         android:layout_height="match_parent"
         android:columnCount="2"
         android:rowCount="3"
+        android:layout_margin="20dp"
         android:layout_below="@id/avatar_user">
 
         <androidx.cardview.widget.CardView
@@ -92,7 +93,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="language"
+                    android:text="genre"
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:textSize="15sp"
@@ -125,7 +126,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="language"
+                    android:text="autor"
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:textSize="15sp"
@@ -157,7 +158,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="language"
+                    android:text="card"
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:textSize="15sp"
@@ -190,7 +191,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="language"
+                    android:text="favourites"
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:textSize="15sp"
@@ -223,7 +224,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="language"
+                    android:text="to read"
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:textSize="15sp"
