chast Zhanbo adding main

--- a/app/src/main/res/layout/options_genre.xml
+++ b/app/src/main/res/layout/options_genre.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/photo_5391288235977719248_y">
+    android:background="@drawable/photo_5391288235977719248_y"
+    tools:context="Options_fragment">
 
 
     <ImageView
