--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -79,6 +79,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/sign_upInsideIn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -91,6 +92,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/forgot_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
