--- a/app/src/main/res/layout/cards_element.xml
+++ b/app/src/main/res/layout/cards_element.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/poka4to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
